# tls-certificates-interface

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  metadata.yaml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  test-requirements-juju-2.in  test-requirements-juju-2.txt  test-requirements.in  test-requirements.txt  tox.ini
.github/: dependabot.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  main.yml  on_merge_v2.yml  on_push_v1.yml  on_push_v2.yml  tests.yml  upload.yml  upload_v0.yml  upload_v1.yml  upload_v2.yml  v1.yml  v2.yml
docs/: index.md
lib/charms/tls_certificates_interface/v0/: tls_certificates.py
lib/charms/tls_certificates_interface/v1/: tls_certificates.py
lib/charms/tls_certificates_interface/v2/: tls_certificates.py
lib/charms/tls_certificates_interface/v3/: tls_certificates.py
lib/charms/tls_certificates_interface/v4/: tls_certificates.py
src/: charm.py  charm_provider.py  charm_requirer.py
tests/: test_insecure_certificates.py
tests/charms/tls_certificates_interface/v0/: test_tls_certificates.py
tests/charms/tls_certificates_interface/v1/: certificates.py  test_tls_certificates_v1.py  test_tls_certificates_v1_provides.py  test_tls_certificates_v1_requires.py
tests/charms/tls_certificates_interface/v1/dummy_provider_charm/: metadata.yaml
tests/charms/tls_certificates_interface/v1/dummy_requirer_charm/: metadata.yaml
tests/charms/tls_certificates_interface/v1/dummy_requirer_charm/src/: charm.py
tests/integration/v1/: test_integration.py
tests/integration/v1/provider_charm/: charmcraft.yaml  metadata.yaml
tests/integration/v1/provider_charm/src/: charm.py
tests/integration/v1/requirer_charm/: actions.yaml  charmcraft.yaml  metadata.yaml
tests/integration/v1/requirer_charm/src/: charm.py
tests/integration/v2/: conftest.py  test_integration.py  test_integration_v2.py
tests/integration/v2/provider_charm/: charmcraft.yaml
tests/integration/v2/provider_charm/src/: charm.py  self_signed_certificates.py
tests/integration/v2/requirer_charm/: actions.yaml  charmcraft.yaml  metadata.yaml
tests/integration/v2/requirer_charm/src/: charm.py
tests/integration/v3/: test_integration_v3.py
tests/integration/v3/provider_charm/: charmcraft.yaml  metadata.yaml
tests/integration/v3/provider_charm/src/: charm.py  self_signed_certificates.py
tests/integration/v3/requirer_charm/: actions.yaml  charmcraft.yaml  metadata.yaml
tests/integration/v3/requirer_charm/src/: charm.py
tests/integration/v4/: certificates.py  conftest.py  test_integration_v4.py
tests/integration/v4/provider_charm/: charmcraft.yaml  pyproject.toml  requirements.in  requirements.txt
tests/integration/v4/provider_charm/src/: charm.py  self_signed_certificates.py
tests/integration/v4/requirer_charm/: charmcraft.yaml  pyproject.toml  requirements-pydantic-v1.in  requirements.in  requirements.txt
tests/integration/v4/requirer_charm/src/: charm.py
tests/unit/: certificate_validation.py
tests/unit/charms/tls_certificates_interface/v0/: test_tls_certificates_v0.py
tests/unit/charms/tls_certificates_interface/v1/: test_tls_certificates_v1.py  test_tls_certificates_v1_provides.py  test_tls_certificates_v1_requires.py
tests/unit/charms/tls_certificates_interface/v1/dummy_provider_charm/: metadata.yaml
tests/unit/charms/tls_certificates_interface/v1/dummy_provider_charm/src/: charm.py
tests/unit/charms/tls_certificates_interface/v1/dummy_requirer_charm/src/: charm.py
tests/unit/charms/tls_certificates_interface/v2/: certificates.py  test_certificates.py  test_tls_certificates_v2.py  test_tls_certificates_v2_provides.py  test_tls_certificates_v2_requires.py
tests/unit/charms/tls_certificates_interface/v2/dummy_provider_charm/: metadata.yaml
tests/unit/charms/tls_certificates_interface/v2/dummy_provider_charm/src/: charm.py
tests/unit/charms/tls_certificates_interface/v2/dummy_requirer_charm/src/: charm.py
tests/unit/charms/tls_certificates_interface/v3/: certificates.py  test_tls_certificates_v3.py  test_tls_certificates_v3_provides.py  test_tls_certificates_v3_requires.py
tests/unit/charms/tls_certificates_interface/v3/dummy_provider_charm/: metadata.yaml
tests/unit/charms/tls_certificates_interface/v3/dummy_provider_charm/src/: charm.py
tests/unit/charms/tls_certificates_interface/v3/dummy_requirer_charm/: metadata.yaml
tests/unit/charms/tls_certificates_interface/v3/dummy_requirer_charm/src/: charm.py
tests/unit/charms/tls_certificates_interface/v4/: certificates.py  test_tls_certificates_v4.py  test_tls_certificates_v4_provides.py  test_tls_certificates_v4_requires.py
tests/unit/charms/tls_certificates_interface/v4/dummy_provider_charm/: charmcraft.yaml
tests/unit/charms/tls_certificates_interface/v4/dummy_provider_charm/src/: charm.py
tests/unit/charms/tls_certificates_interface/v4/dummy_requirer_charm/: charmcraft.yaml  private_key.pem
tests/unit/charms/tls_certificates_interface/v4/dummy_requirer_charm/src/: charm.py
