[project]
name = "tls-certificates-interface"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "cryptography",
    "jsonschema",
    "ops",
    "pydantic",
    "rpds-py==0.18.1"
]

[dependency-groups]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-operator",
    "pytest-asyncio==0.21.2",
    "ops[testing]",
]
dev = [
    "codespell",
    "pyright",
    "ruff",
]
test-juju-2 = [
    "juju==2.9.49.0",
    "websockets==12.0",
]
test-juju-3 = [
    "juju>3"
]

[tool.uv]
conflicts = [
    [
        { group = "test-juju-2" },
        { group = "test-juju-3" },
    ],
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
markers = [
    "upgrade: mark a test as an upgrade test",
]

# Linting tools configuration
[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "C",
    "N",
    "D",
    "I001",
    "G001",  # Logging statement uses str.format
    "G002",  # Logging statement uses %
    "G003",  # Logging statement uses +
    "G004",  # Logging statement uses an f-string
]
preview = true

extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D107",
]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**", "lib/**"]
pythonVersion = "3.8"
reportMissingParameterType = true
