[project]
name = "tls-certificates-interface"
version = "0.1.0"
requires-python = ">=3.8"

dependencies = [
    "cryptography",
    "jsonschema",
    "ops",
    "pydantic",
    "rpds-py"
]

[dependency-groups]
test = [
    "coverage[toml]",
    "jubilant==1.6.1",
    "juju>3",
    "ops[testing]",
    "pytest-operator",
    "pytest-asyncio==0.21.2",
    "pytest",
]
dev = [
    "codespell",
    "pyright",
    "ruff",
    "pkilint",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
markers = [
    "upgrade: mark a test as an upgrade test",
]
pythonpath = [
    "src",
    "lib",
    "tests",
]

# Linting tools configuration
[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "C",
    "N",
    "D",
    "I001",
    "G001",  # Logging statement uses str.format
    "G002",  # Logging statement uses %
    "G003",  # Logging statement uses +
    "G004",  # Logging statement uses an f-string
]
preview = true

extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D107",
    "E501",  # Rely on formatter for enforcing line length where appropriate
]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src", "lib", "tests"]
extraPaths = ["lib"]
ignore = [
    "tests/integration/v2/provider_charm/lib/charms/tls_certificates_interface/v2/tls_certificates.py",
    "tests/integration/v2/requirer_charm/lib/charms/tls_certificates_interface/v2/tls_certificates.py",
    "tests/integration/v3/provider_charm/lib/charms/tls_certificates_interface/v3/tls_certificates.py",
    "tests/integration/v3/requirer_charm/lib/charms/tls_certificates_interface/v3/tls_certificates.py",
    "tests/integration/v4/provider_charm/lib/charms/tls_certificates_interface/v4/tls_certificates.py",
    "tests/integration/v4/requirer_charm/lib/charms/tls_certificates_interface/v4/tls_certificates.py",
]
reportMissingParameterType = true
